Update to see again

--- a/_sass/theme/_mytheme_dark.scss
+++ b/_sass/theme/_mytheme_dark.scss
@@ -36,8 +36,8 @@ $navicon-height             : 4px;
 $sidebar-link-max-width     : 250px;
 $sidebar-screen-min-width   : 1024px;
 
-/* Default light theme for the site */
-:root {
+/* Default mytheme for the site */
+html[data-theme="dark"] {
     --global-base-color                 : #{$background};
     --global-bg-color                   : #{$background};
     --global-footer-bg-color            : #{$background};
