--- a/_sass/theme/_mytheme_light.scss
+++ b/_sass/theme/_mytheme_light.scss
@@ -12,7 +12,8 @@ $lighter-gray               : mix(#fff, $gray, 90%);
 $background                 : #474747;
 $background-light           : mix(#fff, $background, 80%);
 $background-lighter         : mix(#fff, $background, 90%);
-$text                       : #ffffff;
+$lightbackground            : #bac9d4;
+$lightbackground-darker     : mix(#000, $lightbackground, 90%);
 $link                       : #5371C6;
 $link-dark                  : mix(#000, $link, 25%);
 $link-light                 : mix(#fff, $link, 25%);
@@ -39,19 +40,19 @@ $sidebar-screen-min-width   : 1024px;
 /* Default light mytheme for the site */
 :root {
     --global-base-color                 : #{$background};
-    --global-bg-color                   : #{$background};
-    --global-footer-bg-color            : #{$background};
-    --global-border-color               : #{$light-gray};
-    --global-dark-border-color          : #{$background-light};
-    --global-code-background-color      : #fafafa;
+    --global-bg-color                   : #{$lightbackground};
+    --global-footer-bg-color            : #{$lightbackground-darker};
+    --global-border-color               : #bdc1c4;
+    --global-dark-border-color          : #bdsc1c4;
+    --global-code-background-color      : #{$lightbackground};
     --global-code-text-color            : #{$darker-gray};
-    --global-fig-caption-color          : #{$light-gray};
+    --global-fig-caption-color          : #mix(#fff,  #{$dark-gray}, 25%);
     --global-link-color                 : #{$link};
     --global-link-color-hover           : #{$link-dark};
     --global-link-color-visited         : #{$link-light};
-    --global-masthead-link-color        : #{$text};
-    --global-masthead-link-color-hover  : #{$background-light};
-    --global-text-color                 : #{$text};
-    --global-text-color-light           : #f3f3f3;
-    --global-thead-color                : #{$background-lighter};
+    --global-masthead-link-color        : #{$dark-gray};
+    --global-masthead-link-color-hover  : mix(#000, #{$gray}, 25%);
+    --global-text-color                 : #{$dark-gray};
+    --global-text-color-light           : #{$light-gray};
+    --global-thead-color                : #{$lighter-gray};
 }
