Update theme and possible font of bibtex

--- a/_sass/theme/_mytheme_dark.scss
+++ b/_sass/theme/_mytheme_dark.scss
@@ -6,6 +6,7 @@
 $gray                       : #7a8288;
 $dark-gray                  : mix(#000, $gray, 40%);
 $darker-gray                : mix(#000, $gray, 60%);
+$lightless-gray                 : mix(#fff, $gray, 30%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
@@ -13,7 +14,7 @@ $background                 : #474747;
 $background-light           : mix(#fff, $background, 80%);
 $background-lighter         : mix(#fff, $background, 90%);
 $text                       : #e8dfdf;
-$text-lighter               : mix(#fff, $text, 80%);
+$text-lighter               : mix(#fff, $text, 60%);
 $link                       : #A6C9EC;
 $link-dark                  : mix(#000, $link, 25%);
 $link-light                 : mix(#fff, $link, 25%);
@@ -42,7 +43,7 @@ html[data-theme="dark"] {
     --global-base-color                 : #{$background};
     --global-bg-color                   : #{$background};
     --global-footer-bg-color            : #{$background};
-    --global-border-color               : #{$light-gray};
+    --global-border-color               : #{$lightless-gray};
     --global-dark-border-color          : #{$background-light};
     --global-code-background-color      : {$background};
     --global-code-text-color            : #{$text-lighter};
