--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -14,4 +14,5 @@
 <link rel="icon" href="/images/favicon.ico"/>
 <meta name="theme-color" content="#ffffff"/>
 
+<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&display=swap" rel="stylesheet">
 <!-- end custom head snippets -->
